swagger docs finalized
