# docs/swagger.json
@@ -22,7 +22,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "armies"
+                    "Armies"
                 ],
                 "summary": "Get all army data",
                 "responses": {
@@ -63,7 +63,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "data"
+                    "Armies"
                 ],
                 "summary": "Get a single army's data",
                 "parameters": [
@@ -103,7 +103,7 @@
                 }
             }
         },
-        "/characters/{id}": {
+        "/characters": {
             "get": {
                 "description": "get all characters",
                 "consumes": [
@@ -113,9 +113,59 @@
                     "application/json"
                 ],
                 "tags": [
-                    "characters"
+                    "Characters"
                 ],
                 "summary": "Get all character data",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.Character"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/characters/{id}": {
+            "get": {
+                "description": "get character by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Characters"
+                ],
+                "summary": "Get a single character's data",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Character ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -154,7 +204,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "data"
+                    "Species"
                 ],
                 "summary": "Get all species data",
                 "responses": {
@@ -195,7 +245,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "data"
+                    "Species"
                 ],
                 "summary": "Get a single species data",
                 "parameters": [
